implemented clients auto sync
