# internal/server/models/client.go
@@ -2,6 +2,6 @@ package models
 
 // Client represents a client connected to the server.
 type Client struct {
-	Username string
-	Addr     string
+	Username   string `json:"-"`
+	SocketAddr string `json:"socket_addr"`
 }
