# internal/server/service/sync-service.go
@@ -1,25 +1,29 @@
 package service
 
 import (
+	"net"
 	"sync"
-	"time"
 
-	"github.com/blokhinnv/gophkeeper/internal/server/models"
+	"golang.org/x/exp/slices"
 
 	"github.com/go-resty/resty/v2"
 	"github.com/sirupsen/logrus"
+
+	"github.com/blokhinnv/gophkeeper/internal/server/models"
+	slicesUtils "github.com/blokhinnv/gophkeeper/pkg/slices"
 )
 
 // SyncService is an interface for syncing clients.
 type SyncService interface {
 	Register(client *models.Client)
 	Unregister(client *models.Client)
+	Signal(client *models.Client)
 }
 
 // syncService implements the SyncService interface.
 type syncService struct {
 	client  *resty.Client
-	clients map[string]string // Addr: Username
+	clients map[string][]string // Addr: Username
 	mu      sync.Mutex
 }
 
@@ -27,9 +31,8 @@ type syncService struct {
 func NewSyncService() SyncService {
 	s := &syncService{
 		client:  resty.New(),
-		clients: make(map[string]string),
+		clients: make(map[string][]string),
 	}
-	go s.poll()
 	return s
 }
 
@@ -37,30 +40,38 @@ func NewSyncService() SyncService {
 func (s *syncService) Register(client *models.Client) {
 	s.mu.Lock()
 	defer s.mu.Unlock()
-	logrus.Infof("Registered %v", client.Addr)
-	s.clients[client.Addr] = client.Username
+	addrs := s.clients[client.Username]
+	if !slices.Contains(addrs, client.SocketAddr) {
+		s.clients[client.Username] = append(addrs, client.SocketAddr)
+	}
+	logrus.Infof("Registered %v %v", client.Username, client.SocketAddr)
 }
 
 // Unregister unregisters an existing client from the server.
 func (s *syncService) Unregister(client *models.Client) {
 	s.mu.Lock()
 	defer s.mu.Unlock()
-	logrus.Infof("Unregistered %v", client.Addr)
-	delete(s.clients, client.Addr)
+	oldAddrs, ok := s.clients[client.Username]
+	if !ok {
+		return
+	}
+	s.clients[client.Username] = slicesUtils.Remove(oldAddrs, client.SocketAddr)
+	logrus.Infof("Unregistered %v %v", client.Username, client.SocketAddr)
 }
 
-// poll continuously polls registered clients to check if they are still available.
-// It is run as a goroutine when NewSyncService is called.
-func (s *syncService) poll() {
-	ticker := time.NewTicker(500 * time.Millisecond)
-	for range ticker.C {
-		for addr := range s.clients {
-			_, err := s.client.SetBaseURL(addr).R().Get("/")
-			logrus.Info("Polling ", err)
-			if err != nil {
-				logrus.Infof("Unregistered %v", addr)
-				delete(s.clients, addr)
-			}
+// Signal sends a signal to all the user's registered clients.
+func (s *syncService) Signal(client *models.Client) {
+	for _, addr := range s.clients[client.Username] {
+		conn, err := net.Dial("tcp", addr)
+		if err != nil {
+			s.clients[client.Username] = slicesUtils.Remove(s.clients[client.Username], addr)
+			logrus.Infof("unable to reach %v; unregistered", addr)
+			continue
+		}
+		_, err = conn.Write(nil)
+		if err != nil {
+			s.clients[client.Username] = slicesUtils.Remove(s.clients[client.Username], addr)
+			logrus.Infof("unable to reach %v; unregistered", addr)
 		}
 	}
 }
